= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Bug Fixes::

* place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
* accurately trap LoadError from CodeRay if source language is not recognized on code block

== 2.1.0 (2022-06-11) - @mojavelinux

Enhancements::

* arrange body of article or manpage doctype into multiple columns if `page-columns` key is set in theme (#327)
* allow column gap to be specified using `page-column-gap` key (#327)
* introduce `convert_index_categories` method to handle rendering of categories for index inside column box (#327)
* rename `convert_index_list` method to `convert_index_term` to make its purpose more clear (#327)
* add `save_theme` helper to work with a copy of the theme within a scope (#2196)
* add support for `scale` attribute or `iw` unit on `pdfwidth` attribute on image macros (#1933)
* add backlink from bibref on bibliography entry to first reference to that entry in the document (#1737)
* preserve text formatting on index term in index section (#897)
* don't insert page break between part and first chapter if `heading-part-break-after` key in theme is `avoid` (#1795)

=== Details

{url-repo}/releases/tag/v2.1.0[git tag] | {url-repo}/compare/v2.0.8\...v2.1.0[full diff]

== 2.0.8 (2022-06-08) - @mojavelinux

Improvements::

* encapsulate logic to adjust column box inside float and dry run
* automatically set height on column box if not specified; update value automatically when reflowing margins

Bug Fixes::

* correctly compute value of to cursor on extent when column box starts below top of page (#2230)
* fix crash in `ColumnBox#move_past_bottom` when `:reflow_margins` option is not set